# dataEngieneeringProject

./: .gitignore  README.md  pyproject.toml  test_import.py
.devcontainer/: devcontainer.json
project/: Dockerfile  docker-compose.yaml  filebeat.yaml  init.sql
project/files_csv/: test_data.csv
project/flask_app/: Dockerfile  app.py  docker-compose.yaml  requirements.txt
project/flask_app/app/: app.py
project/init/: init.sql
project/load_data_topostgres_csv/: loadcsvtopostgres.py  run.py
pyspark/: README.MD  lab2_notebook.ipynb  notebook.ipynb  requirements.txt  spark_training.ipynb
