[tool.poetry]
name = "dataEngieneeringProject"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    "turekradek <turekradek@gmail.com>",
]

[tool.poetry.dependencies] 
python = "^3.12" 
pandas = "^1.3.3" 
psycopg2 = "^2.9.1" 
dataengieneeringparsers = { git = "git@github.com:turekradek/dataEngieneeringParsers.git", branch = "main" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

