[tool.poetry]
name = "dataEngieneeringProject"
version = "0.1.0"
description = ""
authors = ["turekradek <turekradek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
dataengieneeringparsers = {git = "https://github.com/turekradek/dataEngieneeringParsers.git"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"